--- a/back-end/package.json
+++ b/back-end/package.json
@@ -25,6 +25,6 @@
     "solidity-coverage": "^0.8.1",
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
-    "typescript": ">=4.5.0"
+    "typescript": "^5.6.3"
   }
 }
