chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,10 @@ pnpm-lock.yaml
 package-lock.json
 
 # testing
-./back-end/artifacts
-./back-end/coverage
-./back-end/cache
-./back-end/deployments
+/*/artifacts/
+/*/coverage/
+/*/cache/
+/*/deployments/
 
 # next.js
 /.next/
